[package]
name = "gratte"
version = "0.1.0"
authors = ["Rrogntudju"]
edition = "2021"

[dependencies]
serde = { version ="1", features = ["derive"] }
serde_json = "1"
reqwest = "0.11"
soup = { version = "0.5", default-features = false }
anyhow = "1"

[dev-dependencies]
tokio = {version = "1", features = ["macros"]}
