[package]
name = "hls_player"
version = "0.1.0"
authors = ["Rrogntudju"]
edition = "2021"

[dependencies]
rodio = { git = "https://github.com/Rrogntudju/rodio.git", default-features = false, features = ["symphonia-aac"] }
anyhow = "1"
hls_handler = {path = "../hls_handler"}

[features]
throttling = []

 