[package]
name = "server"
version = "0.3.1"
authors = ["Rrogntudju"]
edition = "2021"

[dependencies]
axum = {version = "0.6", features = ["json"]}
tower-http = {version = "0.4", features = ["fs", "limit"]}
tokio = {version = "1", features = ["macros"]}
anyhow = "1"
serde = { version ="1", features = ["derive"] }
serde_json = "1"
reqwest = "0.11"
hls_player = {path = "../hls_player"}
media = {path = "../media"}
rand = "0.8"
once_cell = "1"

[dev-dependencies]
tower = { version = "0.4", features = ["util"] }