[package]
name = "server"
version = "0.7.0"
authors = ["Rrogntudju"]
edition = "2024"

[dependencies]
axum = {version = "0.8", features = ["json"]}
tower-http = {version = "0.6", features = ["fs", "limit"]}
tokio = {version = "1", features = ["macros"]}
anyhow = "1"
serde = { version ="1", features = ["derive"] }
serde_json = "1"
reqwest = "0.12"
hls_player = {path = "../hls_player"}
media = {path = "../media"}
rand = "0.9"

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }