[package]
name = "server"
version = "0.8.0"
authors = ["Rrogntudju"]
edition = "2024"

[dependencies]
axum = {version = "0.8", features = ["json"]}
tower-http = {version = "0.7", features = ["fs", "limit"]}
tokio = {version = "1", features = ["macros"]}
anyhow = "1"
serde = { version ="1", features = ["derive"] }
serde_json = "1"
reqwest = "0.13"
hls_player = {path = "../hls_player"}
media = {path = "../media"}
rand = {version = "0.10", features = ["thread_rng"]}

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }